Made the hostname lowercase

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
     inputs:
       host_name:
         description: "Hostname"
-        default: LuCelegans
+        default: lucelegans
         required: true
       user:
         description: "Username"
